# libHeaven

./: CMakeLists.txt
Tester/: Application.cpp  Application.hpp  CMakeLists.txt  LoremIpsumView.cpp  LoremIpsumView.hpp  Main.cpp  MainWindow.cpp  MainWindow.hid  MainWindow.hpp  MainWindowActions.hid  main.cpp
Tester/Images/: BlueSky.xml  Images.rcc  LoremIpsum.txt
addons/: hid.xml
cmake/: HeavenConfig.cmake.in  hic.cmake
doc/: Doxygen.common  README.md
doc/pages/: HID.md  README.md
hic/: CMakeLists.txt  HICObject.cpp  HICProperty.cpp  HICProperty.h  HIDGrammar.md  HIDLexer.cpp  HIGenHeader.cpp  HIGenSource.cpp  HIGeneratorBase.h
libBlueSky/: Application.cpp  Application.hpp  CMakeLists.txt  ColorSchema.cpp  ColorSchema.hpp  Containers.cpp  Containers.hpp  Contexts.cpp  Contexts.hpp  Dialog.cpp  Dialog.hpp  FooterWidget.cpp  FooterWidget.hpp  Frame.cpp  Frame.hpp  MiniSplitter.cpp  MiniSplitter.hpp  Mode.cpp  Mode.hpp  SizeGrip.cpp  SizeGrip.hpp  Style.cpp  Style.hpp  ViewDescriptor.cpp  ViewDescriptor.hpp  Views.cpp  Views.hpp  Windows.cpp  Windows.hpp  libBlueSkyAPI.hpp
libBlueSky/Internal/: ContextManager.cpp  ContextManager.hpp  Frame.cpp  HierarchyDumper.cpp  HierarchyDumper.hpp  MiniSplitter.cpp  MiniSplitter.hpp  MultiBar.cpp  MultiBar.hpp  MultiBarContainerWidgetActions.hid  ViewRegistrar.cpp  ViewRegistrar.hpp  ViewsMergerActions.hid  XmlState.cpp  XmlState.hpp
libHeaven/: CMakeLists.txt  Heaven.cpp  Heaven.hpp  HeavenPrivate.hpp
libHeaven/Actions/: Action.cpp  ActionGroup.hpp  DynamicActionMergerPrivate.hpp  Menu.cpp  Menu.hpp  MenuBar.cpp  MenuPrivate.hpp  MergePlace.cpp  MergePlacePrivate.hpp  MergesManager.cpp  Separator.cpp  Separator.hpp  ToolBar.cpp  UiContainer.hpp  UiObject.cpp  WidgetActionWrapper.cpp
libHeaven/App/: Application.cpp  Application.hpp  ApplicationPrivate.hpp  Dialog.cpp  Dialog.hpp  ModePrivate.hpp  ModeSwitcher.hpp  PrimaryWindow.cpp  SecondaryWindow.cpp  SecondaryWindow.hpp  SecondaryWindowPrivate.hpp
libHeaven/CentralUI/ContainerWidgets/: ContainerWidget.cpp  SplitterContainerWidget.hpp
libHeaven/CentralUI/Contexts/: ContextKeys.hpp  ViewContext.cpp
libHeaven/CentralUI/States/: WindowState.cpp  WindowState.hpp  WindowStateRoot.cpp  WindowStateRoot.hpp  WindowStateSplitter.cpp  WindowStateTab.cpp  WindowStateTab.hpp  WindowStateView.hpp  WindowStateWindow.cpp
libHeaven/CentralUI/Views/: View.hpp  ViewDescriptorRegistrar.cpp  ViewDescriptorRegistrar.hpp  ViewIdentifier.hpp
libHeaven/ColorSchemata/: ColorManager.cpp  ColorSchema.cpp
libHeaven/Icons/: IconDefaultProvider.cpp  IconDefaultProvider.hpp  IconManager.cpp  IconManager.hpp  IconPrivate.hpp
libHeaven/MultiBar/: MultiBar.cpp  MultiBar.hpp  MultiBarSection.hpp  MultiBarToolSection.cpp  MultiBarToolSection.hpp  MultiBarViewSection.hpp  MultiBarViewWidget.cpp
libHeaven/Resources/: Heaven.rcc
libHeaven/Style/: Style.cpp
libHeaven/Tools/: KVStore.hpp
libHeaven/Widgets/: FooterWidget.cpp  MiniSplitter.cpp  ModeSwitchCombo.cpp  ModeSwitchWidget.cpp  TabBar.cpp  TabBarPrivate.hpp  TabWidget.hpp
libHeavenActions/: Action.cpp  Action.hpp  ActionContainer.cpp  ActionContainer.hpp  ActionContainerPrivate.hpp  ActionGroup.cpp  ActionGroup.hpp  ActionGroupPrivate.hpp  ActionPrivate.hpp  Actions.dox  CMakeLists.txt  DynamicActionMerger.cpp  DynamicActionMerger.hpp  DynamicActionMergerPrivate.hpp  HeavenActionsPrivate.hpp  Menu.cpp  Menu.hpp  MenuBar.cpp  MenuBar.hpp  MenuBarPrivate.hpp  MenuPrivate.hpp  MergePlace.cpp  MergePlace.hpp  MergePlacePrivate.hpp  MergesManager.cpp  Separator.cpp  Separator.hpp  ToolBar.cpp  ToolBar.hpp  ToolBarPrivate.hpp  UiContainer.cpp  UiContainer.hpp  UiManager.cpp  UiObject.cpp  UiObject.hpp  UiObjectPrivate.hpp  WidgetAction.cpp  WidgetAction.hpp  WidgetActionPrivate.hpp  WidgetActionWrapper.cpp  (+1 more)
libHeavenColors/: CMakeLists.txt  ColorManager.cpp  ColorManager.hpp  ColorManagerPrivate.hpp  ColorSchema.cpp  ColorSchema.hpp  ColorSchemaEditor.cpp  ColorSchemaEditor.hpp  ColorSchemaPrivate.hpp  ColorSet.cpp  ColorSet.hpp  HeavenColorsApi.hpp
libHeavenIcons/: CMakeLists.txt  Icon.cpp  Icon.hpp  IconDefaultProvider.cpp  IconDefaultProvider.hpp  IconManager.cpp  IconManager.hpp  IconManagerPrivate.hpp  IconPrivate.hpp  IconProvider.cpp  IconProvider.hpp  IconRef.cpp  IconRef.hpp  libHeavenIconsAPI.hpp
libStairway/: CMakeLists.txt  StairwayToHeavenTool.cpp  StairwayToHeavenTool.hpp
src/: CMakeLists.txt
src/Heaven/: CMakeLists.txt
src/Tester/: CMakeLists.txt  MainWindow.cpp  MainWindow.hpp  main.cpp
src/hic/: CMakeLists.txt  HICObject.cpp  HICObject.h  HICProperty.cpp  HICProperty.h  HIDGrammar.md  HIDLexer.cpp  HIDLexer.h  HIDParser.cpp  HIDParser.h  HIDToken.cpp  HIDToken.h  HIGenHeader.cpp  HIGenHeader.h  HIGenSource.cpp  HIGenSource.h  HIGeneratorBase.cpp  HIGeneratorBase.h  main.cpp
src/libHeaven/: CMakeLists.txt  Heaven.h  Heaven.hpp  HeavenApi.h  HeavenApi.hpp  HeavenPrivate.hpp
src/libHeaven/Actions/: Action.cpp  Action.h  Action.hpp  ActionContainer.cpp  ActionContainer.h  ActionContainerPrivate.h  ActionContainerPrivate.hpp  ActionGroup.cpp  ActionGroupPrivate.hpp  ActionPrivate.h  ActionPrivate.hpp  DynamicActionMerger.cpp  DynamicActionMerger.hpp  DynamicActionMergerPrivate.hpp  Menu.cpp  Menu.h  MenuBar.cpp  MenuBar.h  MenuBar.hpp  MenuBarPrivate.h  MenuBarPrivate.hpp  MenuPrivate.h  MergePlace.cpp  MergePlace.h  MergePlacePrivate.h  MergesManager.cpp  MergesManager.h  MergesManager.hpp  Separator.cpp  Separator.h  ToolBar.cpp  ToolBar.h  ToolBarPrivate.h  ToolBarPrivate.hpp  UiContainer.cpp  UiContainer.h  UiContainer.hpp  UiManager.cpp  UiManager.h  UiObject.cpp  (+9 more)
src/libHeaven/App/: Application.cpp  Application.hpp  ApplicationPrivate.hpp  Dialog.cpp  Dialog.hpp  HeavenWindow.cpp  HeavenWindow.hpp  HeavenWindowPrivate.hpp  IStoredState.hpp  Mode.cpp  Mode.hpp  ModePrivate.hpp  ModeSwitcher.cpp  ModeSwitcher.hpp  PrimaryWindow.cpp  PrimaryWindow.hpp  PrimaryWindowPrivate.hpp  SecondaryWindow.cpp  SecondaryWindow.hpp
src/libHeaven/CentralUI/: CentralUI.dox  ViewFactory.cpp  ViewFactory.hpp  WindowState.cpp  (+1 more)
(+166 files in other folders)
